--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Professional Coocing boy</title>
+    <title>Professionals Coocing boy</title>
     <meta
       name="description"
       content="Dev Ed is a proffesional cook, with a proffessional"
