deleted HTML files

--- a/index.html
+++ b/index.html
@@ -18,45 +18,6 @@
   </head>
 
   <body>
-    <header><h1>Logo</h1></header>
-
-    <nav>
-      <ul>
-        <li>Home</li>
-        <li>Contact</li>
-        <li>Projects</li>
-        <li>Sign Up</li>
-      </ul>
-      <h2>This is us</h2>
-    </nav>
-
-    <section>
-      <h2>Here is my image gallery</h2>
-      <figure>
-        <img
-          width="400"
-          height="600"
-          src="/img/pexels-alycia-fung-5806643 (1).jpg"
-          alt=""
-        />
-        <figcaption>Photo by Ed</figcaption>
-      </figure>
-    </section>
-
-    <aside>
-      <p>
-        В приложении ASP.NET Core MVC мы также можем использовать систему
-        маршрутизации, которая работает в целом в ASP.NET Core и основные
-        принципы которой были рассмотрены в предыдущих темах, в частности,
-        здесь. В частности, в рамках MVC мы также можем использовать два подхода
-        к определению системы маршрутизации. Первый представляет определение и
-        использование конечных точек с помощью компонентов
-        EndpointRoutingMiddleware и EndpointMiddleware и встраивающих их методов
-        UseRouting и UseEndpoints. Данный подход применяется по умолчанию,
-        когда, например, мы создаем новый проект для MVC. Второй подход
-        предполагает использование RouterMiddleware и метода UseMvc. Далее мы
-        рассмотрим оба подхода.
-      </p>
-    </aside>
+    <h1>Getting started with CSS</h1>
   </body>
 </html>
