--- a/index.html
+++ b/index.html
@@ -15,9 +15,20 @@
       title="Atom"
     />
     <meta name="viewport" content="with=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/style.css">
   </head>
 
   <body>
     <h1>Getting started with CSS</h1>
+    <h3 class="first-title">Mom is cooking the good staff</h3>
+    <h3>Mom is cooking the good staff</h3>
+    <h3>Mom is cooking the good staff</h3>
+    <a id="youtube-link" href=#>Thsi is the empty linkk</a>
   </body>
 </html>
+
+<style>
+  h1 {
+    color: rgb(68, 0, 255);
+  }
+</style>
