--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
     <link rel="stylesheet" href="/style.css">
   </head>
 
-  <body>
-    <h1>Getting started with CSS</h1>
-    <h3 class="first-title">Mom is cooking the good staff</h3>
-    <h3>Mom is cooking the good staff</h3>
-    <h3>Mom is cooking the good staff</h3>
-    <a id="youtube-link" href=#>Thsi is the empty linkk</a>
-  </body>
+<section class="random">
+  <h1>My story</h1>
+  <section class="gallery">
+    <h1 class="my-list"></h1>
+    <ul>
+      <li>hello there</li>
+      <li>hello there</li>
+      <li>hello there</li>
+      <li>hello there</li>
+      <li>hello there</li>
+    </ul>
+  </section>
+</section>
 </html>
 
-<style>
-  h1 {
-    color: rgb(68, 0, 255);
-  }
-</style>
