--- a/index.html
+++ b/index.html
@@ -1,35 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Professionals Coocing boy</title>
-    <meta
-      name="description"
-      content="Dev Ed is a proffesional cook, with a proffessional"
-    />
-    <meta charset="utf-8" />
-    <meta name="robots" content="index, follow" />
-    <link
-      rel="icon"
-      href="/img/home_house_protect_stay_at_home_virus_coronavirus_icon_140378.ico"
-      type="application/atom+xml"
-      title="Atom"
-    />
-    <meta name="viewport" content="with=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
     <link rel="stylesheet" href="/style.css">
   </head>
-
-<section class="random">
-  <h1>My story</h1>
-  <section class="gallery">
-    <h1 class="my-list"></h1>
-    <ul>
-      <li>hello there</li>
-      <li>hello there</li>
-      <li>hello there</li>
-      <li>hello there</li>
-      <li>hello there</li>
-    </ul>
-  </section>
-</section>
+  <body>
+    <div>
+      <p>
+        There are many variations of passages of Lorem Ipsum available, but the
+        majority have suffered alteration in some form, by injected humour, or
+        randomised words which don't look even slightly believable. If you are
+        going to use a passage of Lorem Ipsum, you need to be sure there isn't
+        anything embarrassing hidden in the middle of text. 
+      </p>
+      <p>
+        Contrary to popular belief, Lorem Ipsum is not simply random text. It
+        has roots in a piece of classical Latin literature from 45 BC, making it
+        over 2000 years old. Richard McClintock, a Latin professor at
+        Hampden-Sydney 
+      </p>
+    </div>
+  </body>
 </html>
-
