--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
-  </head>
-  <body>
-    <div>
-      <p>
-        There are many variations of passages of Lorem Ipsum available, but the
-        majority have suffered alteration in some form, by injected humour, or
-        randomised words which don't look even slightly believable. If you are
-        going to use a passage of Lorem Ipsum, you need to be sure there isn't
-        anything embarrassing hidden in the middle of text. 
-      </p>
-      <p>
-        Contrary to popular belief, Lorem Ipsum is not simply random text. It
-        has roots in a piece of classical Latin literature from 45 BC, making it
-        over 2000 years old. Richard McClintock, a Latin professor at
-        Hampden-Sydney 
-      </p>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Web Dev Simplified - Blog</title>
+</head>
+<body>
+  <header>
+    <h1>Web Dev Simplified Blog</h1>
+  </header>
+  <main>
+    <section>
+      <article>
+        <h2>Semantic Versioning Explained</h2>
+        <div>March 1st, 2020</div>
+        <div>Kyle Cook</div>
+        <p>An explanation of what semantic versioning is and why it is important.</p>
+        <a href="#">Read More</a>
+      </article>
+      <article>
+        <h2>The Forgotten React Renderer - React Portal</h2>
+        <div>February 23rd, 2020</div>
+        <div>Kyle Cook</div>
+        <p>React portal lets components be rendered outside their parent component which is incredibly useful in specific scenarios explained in depth in this article.</p>
+        <a href="#">Read More</a>
+      </article>
+    </section>
+  </main>
+  <footer>
+    All articles are original and written specifically for Web Dev Simplified.
+  </footer>
+</body>
 </html>
