--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       </article>
       <article>
         <h2 class="article-title">The Forgotten React Renderer - React Portal</h2>
-        <div>February 23rd, 2020</div>
-        <div>Kyle Cook</div>
+        <div class="article-date">February 23rd, 2020</div>
+        <div class="article-autor">Kyle Cook</div>
         <p>React portal lets components be rendered outside their parent component which is incredibly useful in specific scenarios explained in depth in this article.</p>
         <a href="#">Read More</a>
       </article>
-    </section>
+    </section >
   </main>
-  <footer>
+  <footer id="footer">
     All articles are original and written specifically for Web Dev Simplified.
   </footer>
 </body>
