--- a/index.html
+++ b/index.html
@@ -5,32 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/style.css">
-  <title>Web Dev Simplified - Blog</title>
+  <title>User Profile</title>
 </head>
 <body>
   <header>
-    <h1 class="header-text">Web Dev Simplified Blog</h1>
+    <h1 class="user-name">Kyle Cook</h1>
   </header>
   <main>
+    <section class="section">
+      <h2>Hobbies</h2>
+      <ul class="details-list">
+        <li>Weight Lifting</li>
+        <li>Bowling</li>
+        <li>Music</li>
+      </ul>
+    </section>
     <section>
-      <article>
-        <h2 class="article-title">Semantic Versioning Explained</h2>
-        <div class="article-date">March 1st, 2020</div>
-        <div class="article-autor">Kyle Cook</div>
-        <p>An explanation of what semantic versioning is and why it is important.</p>
-        <a href="#">Read More</a>
-      </article>
-      <article>
-        <h2 class="article-title">The Forgotten React Renderer - React Portal</h2>
-        <div class="article-date">February 23rd, 2020</div>
-        <div class="article-autor">Kyle Cook</div>
-        <p>React portal lets components be rendered outside their parent component which is incredibly useful in specific scenarios explained in depth in this article.</p>
-        <a href="#">Read More</a>
-      </article>
-    </section >
+      <h2 class="bands">Favorite Bands</h2>
+      <ol class="details-list">
+        <li>Seventh Wonder</li>
+        <li>Ne Obliviscaris</li>
+        <li>Be'lakor</li>
+        <li>Opeth</li>
+        <li class="not-included">Katy Perry</li>
+      </ol>
+    </section>
+    <section class="section">
+      <h2>Favorite Languages</h2>
+      <ol class="details-list">
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>Ruby</li>
+      </ol>
+    </section>
   </main>
-  <footer id="footer">
-    All articles are original and written specifically for Web Dev Simplified.
-  </footer>
 </body>
 </html>
