profile user project

--- a/index.html
+++ b/index.html
@@ -4,35 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/style.css">
   <title>User Profile</title>
 </head>
 <body>
   <header>
-    <h1 class="user-name">Kyle Cook</h1>
+    <h1 class="header-text">Kyle Cook</h1>
   </header>
   <main>
-    <section class="section">
+    <section>
       <h2>Hobbies</h2>
-      <ul class="details-list">
+      <ul>
         <li>Weight Lifting</li>
         <li>Bowling</li>
         <li>Music</li>
       </ul>
     </section>
     <section>
-      <h2 class="bands">Favorite Bands</h2>
-      <ol class="details-list">
+      <h2>Favorite Bands</h2>
+      <ol>
         <li>Seventh Wonder</li>
         <li>Ne Obliviscaris</li>
         <li>Be'lakor</li>
         <li>Opeth</li>
-        <li class="not-included">Katy Perry</li>
+        <li>Katy Perry</li>
       </ol>
     </section>
-    <section class="section">
+    <section>
       <h2>Favorite Languages</h2>
-      <ol class="details-list">
+      <ol>
         <li>CSS</li>
         <li>JavaScript</li>
         <li>Ruby</li>
