--- a/index.html
+++ b/index.html
@@ -3,42 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
   <link rel="stylesheet" href="/style.css">
-  <title>User Profile</title>
 </head>
 <body>
-  <header>
-    <h1 class="header-text">Kyle Cook</h1>
-  </header>
-  <main>
-    <section class="green-section">
-      <h2 class="section-title">Hobbies</h2>
-      <ul>
-        <li class="cyan">Weight Lifting</li>
-        <li>Bowling</li>
-        <li>Music</li>
-      </ul>
-    </section>
-    <section >
-      <h2 class="section-title">Favorite Bands</h2>
-      <ol>
-        <li class="cyan">Seventh Wonder</li>
-        <li>Ne Obliviscaris</li>
-        <li>Be'lakor</li>
-        <li>Opeth</li>
-        <li class="cross-off">Katy Perry</li>
-      </ol>
-    </section>
-    <section class="green-section">
-      <a href="#">Link to somhere</a>
-      <h2 class="section-title">Favorite Languages</h2>
-      <ol>
-        <li class="cyan">CSS</li>
-        <li>JavaScript</li>
-        <li>Ruby</li>
-      </ol>
-    </section>
-  </main>
+  <div>
+    <label for="">Email</label>
+    <input type="email" class="email" disabled>
+  </div>
+  <div>
+    <label>My Name is</label>
+    <input type="text" class="name" required>
+  </div>
+  <button type="submit" class="submit">Send</button>
+  
 </body>
 </html>
