--- a/index.html
+++ b/index.html
@@ -7,15 +7,8 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <div>
-    <label for="">Email</label>
-    <input type="email" class="email" disabled>
-  </div>
-  <div>
-    <label>My Name is</label>
-    <input type="text" class="name" required>
-  </div>
-  <button type="submit" class="submit">Send</button>
-  
+ <div>
+<div class="div-1">One</div>
+<div class="div-2">Two</div>
 </body>
 </html>
